adding test images

--- a/2017.html
+++ b/2017.html
@@ -372,22 +372,22 @@
   </div>
 
   <div class="photo">
-    <img src="https://c1.staticflickr.com/3/2828/33963603961_51c848b76d_h.jpg">
+    <img src="photos/2017/04.jpg">
     <h2>tokyo 🇯🇵</h2>
   </div>
 
   <div class="photo">
-    <img src="https://c1.staticflickr.com/3/2906/34093747565_cd91479fca_h.jpg">
+    <img src="photos/2017/03.jpg">
     <h2>tokyo 🇯🇵</h2>
   </div>
 
   <div class="photo">
-    <img src="https://c1.staticflickr.com/3/2931/34053045826_649a61e1a7_h.jpg">
+    <img src="photos/2017/02.jpg">
     <h2>tokyo 🇯🇵</h2>
   </div>
 
   <div class="photo">
-    <img src="https://c1.staticflickr.com/3/2938/33251350594_5bcb24be3a_h.jpg">
+    <img src="photos/2017/01.jpg">
     <h2>tokyo 🇯🇵</h2>
   </div>
 
