--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
 <div class="grid">
 
   <div class="first-two">
-      <div class="photo">
+  <div class="photo">
+    <img src="photos/2017/105.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/104.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div> 
+
+  </div>
+
+  <div class="photo">
     <img src="photos/2017/102.jpg">
     <h2>stockholm 🇸🇪</h2>
   </div> 
@@ -28,9 +40,6 @@
     <img src="photos/2017/101.jpg">
     <h2>stockholm 🇸🇪</h2>
   </div> 
-
-  </div>
-
 
   <div class="photo">
     <img src="photos/2017/100.jpg">
