--- a/index.html
+++ b/index.html
@@ -19,6 +19,50 @@
 <div class="grid">
 
   <div class="first-two">
+
+  </div>
+
+  <div class="photo">
+    <img src="photos/2017/113.jpg">
+    <h2>berlin 🇩🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/112.jpg">
+    <h2>berlin 🇩🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/111.jpg">
+    <h2>berlin 🇩🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/110.jpg">
+    <h2>berlin 🇩🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/109.jpg">
+    <h2>berlin 🇩🇪</h2>
+  </div> 
+
+
+  <div class="photo">
+    <img src="photos/2017/108.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/107.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/106.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
   <div class="photo">
     <img src="photos/2017/105.jpg">
     <h2>paris 🇫🇷</h2>
@@ -28,8 +72,6 @@
     <img src="photos/2017/104.jpg">
     <h2>paris 🇫🇷</h2>
   </div> 
-
-  </div>
 
   <div class="photo">
     <img src="photos/2017/102.jpg">
