--- a/index.html
+++ b/index.html
@@ -18,8 +18,29 @@
 
 <div class="grid">
 
-  <div class="first-two">
+  <div class="first-two"><!-- beginning of first-two -->
     <div class="photo">
+      <img src="photos/2017/117.jpg">
+      <h2>stockholm 🇸🇪</h2>
+    </div> 
+
+    <div class="photo">
+      <img src="photos/2017/116.jpg">
+      <h2>stockholm 🇸🇪</h2>
+    </div>
+  </div><!-- end of first-two -->
+
+  <div class="photo">
+    <img src="photos/2017/115.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/114.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
     <img src="photos/2017/113.jpg">
     <h2>berlin 🇩🇪</h2>
   </div> 
@@ -28,9 +49,6 @@
     <img src="photos/2017/112.jpg">
     <h2>berlin 🇩🇪</h2>
   </div> 
-
-
-  </div>
 
   <div class="photo">
     <img src="photos/2017/109.jpg">
@@ -46,7 +64,6 @@
     <img src="photos/2017/111.jpg">
     <h2>berlin 🇩🇪</h2>
   </div> 
-
 
   <div class="photo">
     <img src="photos/2017/108.jpg">
