--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
   </div> 
 
   <div class="photo">
+    <img src="photos/2018/09.jpg">
+    <h2>helsinki 🇫🇮</h2>
+  </div> 
+
+  <div class="photo">
     <img src="photos/2018/08.jpg">
     <h2>helsinki 🇫🇮</h2>
   </div> 
