--- a/index.html
+++ b/index.html
@@ -20,16 +20,124 @@
 
   <div class="first-two"><!-- beginning of first-two -->
     <div class="photo">
-      <img src="photos/2018/25.jpg">
-      <h2>austin 🇺🇸</h2>
+      <img src="photos/2018/46.jpg">
+      <h2>stockholm 🇸🇪</h2>
     </div> 
 
     <div class="photo">
-      <img src="photos/2018/24.jpg">
-      <h2>austin 🇺🇸</h2>
+      <img src="photos/2018/45.jpg">
+      <h2>stockholm 🇸🇪</h2>
     </div>
   </div><!-- end of first-two -->
 
+
+
+  <div class="photo">
+    <img src="photos/2018/44.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/43.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/42.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/41.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/40.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/39.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/38.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/37.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/36.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/35.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/34.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/33.jpg">
+    <h2>paris 🇫🇷</h2>
+  </div>
+
+
+  <div class="photo">
+    <img src="photos/2018/32.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/31.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/30.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/29.jpg">
+    <h2>åland 🇦🇽</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/28.jpg">
+    <h2>åland 🇦🇽</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/27.jpg">
+    <h2>åland 🇦🇽</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/26.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+
+  <div class="photo">
+    <img src="photos/2018/25.jpg">
+    <h2>austin 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/24.jpg">
+    <h2>austin 🇺🇸</h2>
+  </div>
 
   <div class="photo">
     <img src="photos/2018/22.jpg">
