--- a/index.html
+++ b/index.html
@@ -20,17 +20,136 @@
 
   <div class="first-two"><!-- beginning of first-two -->
     <div class="photo">
-      <img src="photos/2018/44.jpg">
-      <h2>stockholm 🇸🇪</h2>
+      <img src="photos/2018/69.jpg">
+      <h2>LA 🇺🇸</h2>
     </div> 
 
     <div class="photo">
-      <img src="photos/2018/45.jpg">
-      <h2>stockholm 🇸🇪</h2>
+      <img src="photos/2018/68.jpg">
+      <h2>LA 🇺🇸</h2>
     </div>
   </div><!-- end of first-two -->
 
 
+
+  <div class="photo">
+    <img src="photos/2018/67.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/66.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/65.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/64.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/63.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/62.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/61.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/60.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/59.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/58.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+
+  <div class="photo">
+    <img src="photos/2018/57.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/56.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/55.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/54.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/53.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/52.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/51.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/50.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/49.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/48.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+
+
+
+  <div class="photo">
+    <img src="photos/2018/47.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/44.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/45.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div>
 
   <div class="photo">
     <img src="photos/2018/46.jpg">
