--- a/index.html
+++ b/index.html
@@ -20,17 +20,86 @@
 
   <div class="first-two"><!-- beginning of first-two -->
     <div class="photo">
-      <img src="photos/2018/69.jpg">
-      <h2>LA 🇺🇸</h2>
+      <img src="photos/2018/83.jpg">
+      <h2>Grand Canyon 🇺🇸</h2>
     </div> 
 
     <div class="photo">
-      <img src="photos/2018/68.jpg">
-      <h2>LA 🇺🇸</h2>
+      <img src="photos/2018/81.jpg">
+      <h2>Newport 🇺🇸</h2>
     </div>
   </div><!-- end of first-two -->
 
 
+  <div class="photo">
+    <img src="photos/2018/82.jpg">
+    <h2>Newport 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/80.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/79.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/78.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/77.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/76.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/75.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/74.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/73.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/72.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/71.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/70.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/69.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/68.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
 
   <div class="photo">
     <img src="photos/2018/67.jpg">
