--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
 
   <div class="photo">
     <img src="photos/2018/80.jpg">
-    <h2>LA 🇺🇸</h2>
+    <h2>Malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/79.jpg">
-    <h2>LA 🇺🇸</h2>
+    <h2>Malibu 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/78.jpg">
-    <h2>LA 🇺🇸</h2>
+    <h2>Malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/77.jpg">
-    <h2>LA 🇺🇸</h2>
+    <h2>Malibu 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/76.jpg">
-    <h2>LA 🇺🇸</h2>
+    <h2>Malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/75.jpg">
-    <h2>LA 🇺🇸</h2>
+    <h2>Malibu 🇺🇸</h2>
   </div> 
 
   <div class="photo">
