--- a/28.html
+++ b/28.html
@@ -18,489 +18,149 @@
 
 <div class="grid">
 
-  <div class="first-two"><!-- beginning of first-two -->
-      <div class="photo">
-    <img src="photos/2018/102.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+
+  <div class="photo">
+    <img src="photos/2018/28/AA033A.jpg">
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/28/AA034A.jpg">
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/28/AA035A.jpg">
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/28/AA036A.jpg">
   </div>
   
   <div class="photo">
-    <img src="photos/2018/101.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-  </div><!-- end of first-two -->
-
-
-  
-  <div class="photo">
-    <img src="photos/2018/98.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-  
-  <div class="photo">
-    <img src="photos/2018/99.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div>  
-  
-  <div class="photo">
-    <img src="photos/2018/96.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/95.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-  
-  <div class="photo">
-    <img src="photos/2018/94.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/93.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/92.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/90.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/89.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/88.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/87.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/86.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/85.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-  
-  <div class="photo">
-    <img src="photos/2018/84.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/83.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/81.jpg">
-    <h2>Newport 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/82.jpg">
-    <h2>Newport 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/80.jpg">
-    <h2>Malibu 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/79.jpg">
-    <h2>Malibu 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/78.jpg">
-    <h2>Malibu 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/77.jpg">
-    <h2>Malibu 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/76.jpg">
-    <h2>Malibu 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/75.jpg">
-    <h2>Malibu 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/74.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/73.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/72.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/71.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/70.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/69.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/68.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/67.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/66.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/65.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/64.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/63.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/62.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/61.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/60.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/59.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/58.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-
-  <div class="photo">
-    <img src="photos/2018/57.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/56.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/55.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/54.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/53.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/52.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/51.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/50.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/49.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/48.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-
-
-
-  <div class="photo">
-    <img src="photos/2018/47.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/44.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/45.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/46.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/43.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/42.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/41.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/40.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/39.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/38.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/37.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/36.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/35.jpg">
-    <h2>paris 🇫🇷</h2>
+    <img src="photos/2018/28/AB001.jpg">
   </div>
   
   <div class="photo">
-    <img src="photos/2018/34.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/33.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div>
-
-
-  <div class="photo">
-    <img src="photos/2018/32.jpg">
-    <h2>stockholm 🇸🇪</h2>
+    <img src="photos/2018/28/AB003.jpg">
   </div>
   
   <div class="photo">
-    <img src="photos/2018/31.jpg">
-    <h2>stockholm 🇸🇪</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/30.jpg">
-    <h2>stockholm 🇸🇪</h2>
+    <img src="photos/2018/28/AB004.jpg">
   </div>
   
   <div class="photo">
-    <img src="photos/2018/29.jpg">
-    <h2>åland 🇦🇽</h2>
-  </div> 
+    <img src="photos/2018/28/AB005.jpg">
+  </div>
+
   
   <div class="photo">
-    <img src="photos/2018/25.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div> 
-
+    <img src="photos/2018/28/AB007.jpg">
+  </div>
+  
   <div class="photo">
-    <img src="photos/2018/24.jpg">
-    <h2>austin 🇺🇸</h2>
+    <img src="photos/2018/28/AB008.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB009.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB010.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB011.jpg">
+  </div>
+  
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB013.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB014.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB015.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB017.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB018.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB019.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB020.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB021.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB022.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB023.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB024.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB025.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB026.jpg">
+  </div>
+  
+  <div class="photo">
+    <img src="photos/2018/28/AB027.jpg">
+  </div>
+  
+    <div class="photo">
+    <img src="photos/2018/28/AB028.jpg">
+  </div>
+  
+    <div class="photo">
+    <img src="photos/2018/28/AB029.jpg">
+  </div>
+  
+    <div class="photo">
+    <img src="photos/2018/28/AB030.jpg">
+  </div>
+  
+    <div class="photo">
+    <img src="photos/2018/28/AB031.jpg">
+  </div>
+
+
+    <div class="photo">
+    <img src="photos/2018/28/AB034.jpg">
+  </div>
+  
+    <div class="photo">
+    <img src="photos/2018/28/AB035.jpg">
   </div>
 
   <div class="photo">
-    <img src="photos/2018/22.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/21.jpg">
-    <h2>austin 🇺🇸</h2>
+    <img src="photos/2018/28/AB036.jpg">
   </div>
-
-  <div class="photo">
-    <img src="photos/2018/20.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/19.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/18.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/17.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/16.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/15.jpg">
-    <h2>austin 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/14.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/13.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/12.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/11.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/10.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/09.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/08.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/07.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/06.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/05.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/04.jpg">
-    <h2>helsinki 🇫🇮</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/03.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/02.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/01.jpg">
-    <h2>paris 🇫🇷</h2>
-  </div>
+  
+  
+  
+  
 
 
 
