--- a/index.html
+++ b/index.html
@@ -20,17 +20,22 @@
 
   <div class="first-two"><!-- beginning of first-two -->
       <div class="photo">
-    <img src="photos/2018/102.jpg">
+    <img src="photos/2018/103.jpg">
     <h2>Grand Canyon 🇺🇸</h2>
   </div> 
   
   <div class="photo">
-    <img src="photos/2018/101.jpg">
+    <img src="photos/2018/102.jpg">
     <h2>Grand Canyon 🇺🇸</h2>
   </div> 
   </div><!-- end of first-two -->
 
   
+  <div class="photo">
+    <img src="photos/2018/101.jpg">
+    <h2>Grand Canyon 🇺🇸</h2>
+  </div> 
+
   <div class="photo">
     <img src="photos/2018/98.jpg">
     <h2>Grand Canyon 🇺🇸</h2>
