--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
   </div> 
 
   <div class="photo">
+    <img src="photos/2018/104.jpg">
+    <h2>Grand Canyon 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
     <img src="photos/2018/95.jpg">
     <h2>Grand Canyon 🇺🇸</h2>
   </div> 
