--- a/index.html
+++ b/index.html
@@ -19,137 +19,199 @@
 <div class="grid">
 
   <div class="first-two"><!-- beginning of first-two -->
-      <div class="photo">
-    <img src="photos/2018/103.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
-  </div> 
+
   
   </div><!-- end of first-two -->
 
+  <div class="photo">
+    <img src="photos/2018/105.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/106.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/107.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/108.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/109.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/110.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/111.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/112.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/113.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/114.jpg">
+    <h2>stockholm 🇸🇪 🇺🇸</h2>
+  </div> 
+
+
+
+  <div class="photo">
+    <img src="photos/2018/103.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
   
   <div class="photo">
     <img src="photos/2018/101.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/98.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
   
   <div class="photo">
     <img src="photos/2018/99.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div>  
   
   <div class="photo">
     <img src="photos/2018/96.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/104.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/95.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
   
   <div class="photo">
     <img src="photos/2018/94.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/93.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/92.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/90.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/89.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/88.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/87.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/86.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/85.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
   
   <div class="photo">
     <img src="photos/2018/84.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/83.jpg">
-    <h2>Grand Canyon 🇺🇸</h2>
+    <h2>grand canyon 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/81.jpg">
-    <h2>Newport 🇺🇸</h2>
+    <h2>newport 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/82.jpg">
-    <h2>Newport 🇺🇸</h2>
+    <h2>newport 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/80.jpg">
-    <h2>Malibu 🇺🇸</h2>
+    <h2>malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/79.jpg">
-    <h2>Malibu 🇺🇸</h2>
+    <h2>malibu 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/78.jpg">
-    <h2>Malibu 🇺🇸</h2>
+    <h2>malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/77.jpg">
-    <h2>Malibu 🇺🇸</h2>
+    <h2>malibu 🇺🇸</h2>
   </div> 
 
   <div class="photo">
     <img src="photos/2018/76.jpg">
-    <h2>Malibu 🇺🇸</h2>
+    <h2>malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
     <img src="photos/2018/75.jpg">
-    <h2>Malibu 🇺🇸</h2>
+    <h2>malibu 🇺🇸</h2>
   </div> 
 
   <div class="photo">
