--- a/index.html
+++ b/index.html
@@ -25,61 +25,61 @@
 
   <div class="photo">
     <img src="photos/2018/105.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/106.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/107.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/108.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/109.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/110.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/111.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/112.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/113.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
   
   <div class="photo">
     <img src="photos/2018/114.jpg">
-    <h2>stockholm 🇸🇪 🇺🇸</h2>
+    <h2>stockholm 🇸🇪 </h2>
   </div> 
 
 
