--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
   </div> 
 
 
+  <div class="photo">
+    <img src="photos/2018/115.jpg">
+    <h2>stockholm 🇸🇪 </h2>
+  </div> 
+
+
 
   <div class="photo">
     <img src="photos/2018/103.jpg">
