--- a/griddy.html
+++ b/griddy.html
@@ -97,6 +97,11 @@
 <div class="event-block gc">
   <h3>grand canyon 🇺🇸</h3>
 
+      <div class="photo">
+    <img src="photos/2018/83.jpg" class="active">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
+
   <div class="photo">
     <img src="photos/2018/103.jpg">
     <h2>grand canyon 🇺🇸</h2>
@@ -127,10 +132,7 @@
     <img src="photos/2018/94.jpg">
     <h2>grand canyon 🇺🇸</h2>
   </div>
-    <div class="photo hero">
-    <img src="photos/2018/83.jpg">
-    <h2>grand canyon 🇺🇸</h2>
-  </div> 
+
   <div class="photo">
     <img src="photos/2018/96.jpg">
     <h2>grand canyon 🇺🇸</h2>
@@ -146,6 +148,29 @@
     <h2>grand canyon 🇺🇸</h2>
   </div> 
 
+  <div class="photo">
+    <img src="photos/2018/89.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
+
+    <div class="photo">
+    <img src="photos/2018/88.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/87.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
+    <div class="photo">
+    <img src="photos/2018/85.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
+  
+  <div class="photo">
+    <img src="photos/2018/84.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
 
 
 
@@ -163,37 +188,13 @@
   </label>
 
 
-  
 
-  <div class="photo">
-    <img src="photos/2018/89.jpg">
-    <h2>grand canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/88.jpg">
-    <h2>grand canyon 🇺🇸</h2>
-  </div> 
-
-  <div class="photo">
-    <img src="photos/2018/87.jpg">
-    <h2>grand canyon 🇺🇸</h2>
-  </div> 
 
   <div class="photo">
     <img src="photos/2018/86.jpg">
     <h2>grand canyon 🇺🇸</h2>
   </div> 
 
-  <div class="photo">
-    <img src="photos/2018/85.jpg">
-    <h2>grand canyon 🇺🇸</h2>
-  </div> 
-  
-  <div class="photo">
-    <img src="photos/2018/84.jpg">
-    <h2>grand canyon 🇺🇸</h2>
-  </div> 
 
 </div>
 
@@ -201,9 +202,19 @@
 <div class="event-block california">
   <h3>california 🇺🇸</h3>
   
-  <div class="photo hero">
-    <img src="photos/2018/75.jpg">
+  <div class="photo">
+    <img src="photos/2018/75.jpg" class="active">
     <h2>newport 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/77.jpg">
+    <h2>malibu 🇺🇸</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/76.jpg">
+    <h2>malibu 🇺🇸</h2>
   </div>
 
   <div class="photo">
@@ -227,25 +238,13 @@
     <h2>malibu 🇺🇸</h2>
   </div>
 
-  <div class="photo">
-    <img src="photos/2018/77.jpg">
-    <h2>malibu 🇺🇸</h2>
-  </div> 
+  
 
   <div class="photo">
-    <img src="photos/2018/76.jpg">
-    <h2>malibu 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/74.jpg">
+    <img src="photos/2018/74.jpg" class="active">
     <h2>LA 🇺🇸</h2>
   </div>
 
-  <div class="photo">
-    <img src="photos/2018/73.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div> 
 
   <div class="photo">
     <img src="photos/2018/72.jpg">
@@ -288,11 +287,6 @@
   </div>
 
   <div class="photo">
-    <img src="photos/2018/64.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
     <img src="photos/2018/63.jpg">
     <h2>LA 🇺🇸</h2>
   </div>
@@ -302,15 +296,6 @@
     <h2>LA 🇺🇸</h2>
   </div>
 
-  <div class="photo">
-    <img src="photos/2018/61.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
-
-  <div class="photo">
-    <img src="photos/2018/60.jpg">
-    <h2>LA 🇺🇸</h2>
-  </div>
 
   <div class="photo">
     <img src="photos/2018/59.jpg">
@@ -321,7 +306,20 @@
     <img src="photos/2018/58.jpg">
     <h2>LA 🇺🇸</h2>
   </div>
+    <div class="photo">
+    <img src="photos/2018/60.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
 
+  <div class="photo">
+    <img src="photos/2018/61.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/64.jpg">
+    <h2>LA 🇺🇸</h2>
+  </div>
 
 
   </div>
