ore grand canyon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,46 @@
 </div>
 
 <div class="grid">
+
+  <div class="first-two"><!-- beginning of first-two -->
+
+  <div class="photo">
+    <img src="photos/2018/116.jpg">
+    <h2>grand canyon 🇺🇸</h2>
+  </div> 
+  
+  
+  <div class="photo">
+    <img src="photos/2018/118.jpg">
+    <h2>grand canyon 🇺🇸🇪 </h2>
+  </div> 
+  </div><!-- end of first-two -->
+
+  
+  
+  <div class="photo">
+    <img src="photos/2018/119.jpg">
+    <h2>grand canyon 🇺🇸🇪 </h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/120.jpg">
+    <h2>grand canyon 🇺🇸🇪 </h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/121.jpg">
+    <h2>newport 🇺🇸 </h2>
+  </div> 
+
+  
+  <div class="photo">
+    <img src="photos/2018/122.jpg">
+    <h2>newport 🇺🇸  </h2>
+  </div> 
+
   <div class="photo">
     <img src="photos/2018/105.jpg">
     <h2>stockholm 🇸🇪 </h2>
@@ -27,13 +67,6 @@
     <img src="photos/2018/106.jpg">
     <h2>stockholm 🇸🇪 </h2>
   </div> 
-
-  <div class="first-two"><!-- beginning of first-two -->
-
-  
-  </div><!-- end of first-two -->
-
-
   
   <div class="photo">
     <img src="photos/2018/107.jpg">
