--- a/griddy.html
+++ b/griddy.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="catalog">
+    <!-- <div class="catalog">
         <a href="index.html"><img src="xeniaayunova.gif" class="xenia-ayunova-logo"></a>
-    </div>
+    </div> -->
 
     <div class="container">
 
@@ -25,7 +25,7 @@
                 <h3>stockholm 🇸🇪 </h3>
 
                 <div class="photo">
-                    <img data-src="photos/2018/110.jpg" src="photos/2018/110-m.jpg">
+                    <img src="photos/2018/110.jpg" class="active">
                     <h2>stockholm 🇸🇪 </h2>
                 </div>
 
