--- a/griddy.html
+++ b/griddy.html
@@ -17,9 +17,23 @@
     </div> -->
 
     <div class="container">
+      <h1>xenerr.com</h1>
+      <ul class="years">
+        <li><a href="#2018">2018</a></li>
+        <li><a href="#2017">2017</a></li>
+        <li><a href="#2016">2016</a></li>
+        <li><a href="#2015">2015</a></li>
+        <li><a href="#2014">2014</a></li>
+        <li><a href="#2013">2013</a></li>
+        <li><a href="#2012">2012</a></li>
+        <li><a href="#2011">2011</a></li>
+        <li><a href="#2010">2010</a></li>
+        <li><a href="#2009">2009</a></li>
+        <li><a href="#2008">2008</a></li>
+        <li><a href="#2007">2007</a></li>
+      </ul>
 
         <article class="2018">
-            <h2>2018</h2>
 
             <div class="event-block twentyeight">
                 <h3>stockholm 🇸🇪 </h3>
