--- a/index.html
+++ b/index.html
@@ -20,6 +20,53 @@
 
   <div class="first-two"><!-- beginning of first-two -->
 
+
+  </div><!-- end of first-two -->
+  <div class="photo">
+    <img src="photos/2018/123.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div>
+
+  <div class="photo">
+    <img src="photos/2018/124.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/125.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/126.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/127.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/128.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/129.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/130.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2018/131.jpg">
+    <h2>moscow 🇷🇺</h2>
+  </div> 
+
   <div class="photo">
     <img src="photos/2018/116.jpg">
     <h2>grand canyon 🇺🇸</h2>
@@ -30,9 +77,6 @@
     <img src="photos/2018/118.jpg">
     <h2>grand canyon 🇺🇸🇪 </h2>
   </div> 
-  </div><!-- end of first-two -->
-
-  
   
   <div class="photo">
     <img src="photos/2018/119.jpg">
