--- a/2017.html
+++ b/2017.html
@@ -40,6 +40,32 @@
     <h2>stockholm 🇸🇪</h2>
   </div> 
 
+  
+  <div class="photo">
+    <img src="photos/2017/130.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/131.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/132.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+  <div class="photo">
+    <img src="photos/2017/133.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
+    <div class="photo">
+    <img src="photos/2017/134.jpg">
+    <h2>stockholm 🇸🇪</h2>
+  </div> 
+
   <div class="photo">
     <img src="photos/2017/125.jpg">
     <h2>stockholm 🇸🇪</h2>
