--- a/2019.html
+++ b/2019.html
@@ -8,6 +8,7 @@
 <meta name="author" content="xenia ayunova">
 <meta name="keywords" content="front-end development, photography, web development">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
+<meta property="og:image" content="2019/xenerrdotcom.jpg"/>
 </head>
 
 
@@ -46,10 +47,6 @@
 
   <div class="photoo budapest">
     <img src="photos/2019/52.jpg">
-  </div>
-
-  <div class="photoo budapest">
-    <img src="photos/2019/53.jpg">
   </div>
 
   <div class="photoo budapest">
