--- a/2019.html
+++ b/2019.html
@@ -86,6 +86,10 @@
   </div>
 
   <div class="photoo capri">
+    <img src="photos/2019/151-2.jpg">
+  </div>
+
+  <div class="photoo capri">
     <img src="photos/2019/151.jpg">
   </div>
 
@@ -419,19 +423,19 @@
     <img src="photos/2019/67.jpg">
   </div> 
 
-  <div class="photoo montpellier">
+  <div class="photoo maguelone">
     <img src="photos/2019/66.jpg">
   </div> 
 
-  <div class="photoo montpellier">
+  <div class="photoo maguelone">
     <img src="photos/2019/65.jpg">
   </div> 
 
-  <div class="photoo montpellier">
+  <div class="photoo maguelone">
     <img src="photos/2019/64.jpg">
   </div> 
 
-  <div class="photoo montpellier">
+  <div class="photoo maguelone">
     <img src="photos/2019/63.jpg">
   </div> 
 
