--- a/2019.html
+++ b/2019.html
@@ -14,7 +14,7 @@
 
 <body>
 <div class="catalog">
-  <a href="index.html"><img src="2019/xenerrdotcom.jpg" class="xenerr-logo"></a>
+  <a href="index.html"><img src="2019/xenerr-logo.jpg" class="xenerr-logo"></a>
 </div>
 
 <div class="grid">
